# protocol

./: .gitattributes  .gitignore  .rgignore  Cargo.toml  Dockerfile  Dockerfile.devnet  Dockerfile.riscv-cuda  Makefile  README.md
.github/workflows/: docker-build-devnet.yml  docker-builder.yml
btc-light-client/: Cargo.toml  README.md
btc-light-client/core/: Cargo.toml
btc-light-client/core/src/: hasher.rs  leaves.rs  lib.rs  light_client.rs  mmr.rs  types.rs
btc-light-client/elf/: riscv32im-succinct-zkvm-elf
btc-light-client/program/: Cargo.toml
btc-light-client/program/src/: main.rs
btc-light-client/script/: Cargo.toml
btc-light-client/utils/: Cargo.toml
btc-light-client/utils/src/: lib.rs
circuit/elf/: riscv32im-succinct-zkvm-elf
circuits/core/src/: lib.rs
circuits/elf/: riscv32im-succinct-zkvm-elf
contracts/: README.md  foundry.toml  remappings.txt  sync-artifacts.sh
contracts/artifacts/: IERC20.json  MockToken.json  MockUSDC.json  MockUSDT.json  RiftExchange.json  SP1MockVerifier.json  TypeExposer.json  Types.json
contracts/broadcast/DeployMockVerifier.sol/8453/: run-1740436059.json  run-1740436086.json  run-1740436105.json  run-latest.json
contracts/broadcast/DeployRiftExchange.s.sol/8453/: run-1740438562.json
contracts/scripts/: DeployMockVerifier.sol  DeployRiftExchange.s.sol
contracts/src/: BitcoinLightClient.sol  BitcoinLightClientUpgradeable.sol  BitcoinMMRStorage.sol  MMRegistry.sol  MarketMakerRegistry.sol  RiftExchange.sol
contracts/src/libraries/: CommitmentVerificationLib.sol  Constants.sol  Errors.sol  Events.sol  LightClientVerificationLib.sol  MarketLib.sol  RiftUtils.sol  Types.sol  VaultLib.sol
contracts/tests/: LiquidityTest.t.sol  MMRegistry.t.sol  SwapTest.t.sol  TypeExposer.sol
contracts/tests/cache/: test-failures
contracts/tests/cache/fuzz/: failures
contracts/tests/invariant/: TestRiftInvariant.sol
contracts/tests/unit/: TestLightClientVerifier.sol  TestRiftUnit.sol
contracts/tests/utils/: MockToken.sol  MockUSDC.sol  MockUSDT.sol  RiftTest.sol  TestPlus.sol
crates/bitcoin-core-rs/: Cargo.toml
crates/bitcoin-core-rs/src/: error.rs  lib.rs
crates/bitcoin-data-engine/: Cargo.toml
crates/bitcoin-data-engine/src/: lib.rs
crates/bitcoin-light-client-core/: Cargo.toml  README.md
crates/bitcoin-light-client-core/src/: hasher.rs  leaves.rs  lib.rs  light_client.rs  mmr.rs
crates/bitcoin-light-client-program/: Cargo.toml
crates/bitcoin-light-client-program/src/: main.rs
crates/data-engine/: Cargo.toml
crates/data-engine/src/: db.rs  engine.rs  lib.rs  models.rs
crates/rift-core/: Cargo.toml
crates/rift-core/src/: lib.rs  payments.rs  spv.rs  types.rs  vaults.rs
crates/rift-program/: Cargo.toml
crates/rift-program/src/: main.rs
crates/rift-sdk/: Cargo.toml  build.rs
crates/rift-sdk/src/: bindings.rs  bitcoin_utils.rs  checkpoint_mmr.rs  errors.rs  indexed_mmr.rs  lib.rs  mmr.rs  proof.rs  proof_generator.rs  transaction.rs  txn_builder.rs
crates/sdk/: Cargo.toml
crates/settlement-core/: Cargo.toml
crates/settlement-core/src/: lib.rs  payments.rs  spv.rs  types.rs  vaults.rs
crates/settlement-program/: Cargo.toml
crates/settlement-sdk/: Cargo.toml
crates/settlement-sdk/src/: bindings.rs  transaction.rs
crates/sol-bindings/: Cargo.toml
crates/sol-bindings/src/: lib.rs
crates/sol-types/: Cargo.toml
crates/sol-types/src/: lib.rs
elf/: riscv32im-succinct-zkvm-elf
integration-tests/: Cargo.toml
integration-tests/src/: bitcoin_data_engine_test.rs  data_engine_test.rs  devnet_test.rs  hypernode_test.rs  lib.rs  reorg_test.rs  test_utils.rs  txn_broadcast_test.rs
lab/: .gitignore  README.md  block_analysis.py  hashrate_sim.py  historical_confirmations.py  pyproject.toml  sim_confirmations.py
sim/: bitcoin_cache.json
test-data/: .gitignore  Cargo.toml  README.md  download_blocks.py  download_headers.py  env.example  get_bitcoin_data.py  pyproject.toml
test-data/data/: bch_headers_478559_578559.json  blocks.json  blocks_10000_800000.json  headers_0_9999.json
test-data/data/blocks/: block_799990.hex  block_799991.hex  block_799992.hex  block_799993.hex  block_799994.hex  block_799995.hex  block_799996.hex  block_799997.hex  block_799998.hex  block_799999.hex  block_800000.hex
test-data/src/: lib.rs
