[workspace]
members = [
  "bin/benchmark-light-client",
  "bin/devnet",
  "bin/data-engine-server",
  "bin/hypernode",
  "bin/checkpoint-downloader",
  "bin/market-maker",
  "bin/sol-utils",
  "crates/bitcoin-data-engine",
  "crates/data-engine",
  "crates/bitcoin-core-rs",
  "crates/bitcoin-light-client-core",
  "crates/rift-sdk",
  "crates/rift-core", 
  "crates/rift-program",
  "crates/sol-bindings",
  "test-data",
  "integration-tests"
]

resolver = "2"

[workspace.package]
version = "0.1.0"
rust-version = "1.82.0"
edition = "2021"
exclude = [".github/"]

[workspace.dependencies]
# Internal dependencies
sol-bindings= { path = "crates/sol-bindings" }
bitcoin-core-rs = { path = "crates/bitcoin-core-rs"}
bitcoin-light-client-core = { path = "crates/bitcoin-light-client-core" }
bitcoin-data-engine = { path = "crates/bitcoin-data-engine" }
rift-core = { path = "crates/rift-core" }
rift-sdk = { path = "crates/rift-sdk" }
rift-program = {path = "crates/rift-program"}
data-engine = { path = "crates/data-engine" }
test-data-utils = { path = "test-data" }
data-engine-server = { path = "bin/data-engine-server" }
checkpoint-downloader = { path = "bin/checkpoint-downloader" }
devnet = {path = "bin/devnet"}
market-maker = {path = "bin/market-maker"}
hypernode = {path = "bin/hypernode"}

# SP1 dependencies
sp1-helper = "4.1.6"
sp1-sdk = { version = "4.1.6", features = ["cuda"]}
sp1-cuda = "4.1.6"
sp1-zkvm = "4.1.6"
sp1-build = "4.1.6"

# External dependencies
crypto-bigint = "0.5.5"
tiny-keccak = "2.0.2"
sha2 = "0.10.8"

bitcoin = { git = "https://github.com/riftresearch/rust-bitcoin", tag = "bitcoin-0.32.5-patch-v1", default-features = false}
# This needs to be pinned to the same version of rust-bitcoin
bitcoincore-rpc-async = { git = "https://github.com/riftresearch/rust-bitcoincore-rpc-async", tag = "bitcoin-0.32.5-patch-v1" }

accumulators = { git = "https://github.com/riftresearch/rust-accumulators.git", rev = "3b2c846edee5db7917fc4a0f548d28658f559355", features = ["all"] }
clap = { version = "4.0", features = ["derive", "env"] }
hex = "0.4.3"
hex-literal = "0.4.1"
once_cell = "1.18"
prettytable = "0.10"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = { version = "1.0", features = ["alloc"] }
thiserror = "1.0.63"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tokio-rusqlite = { version = "0.6.0", features = ["bundled"] }
axum = { version = "0.7", features = ["json", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
tempfile = { version = "3.6.0" }
serial_test = "3.2.0"

alloy-sol-types = { version = "0.8.0", features = ["json"] }
alloy-contract = "0.8.0"
alloy = { version = "0.8.0", features = ["full", "node-bindings", "json", "json-rpc"] }
alloy-primitives = "0.8.12"
async-trait = "0.1.86"
reqwest = { version = "0.12.12", features = ["json"] }
zstd = "0.13.3"

eyre = "0.6.12"
tokio = {version="1.40.0", features=["full", "rt-multi-thread", "macros"]}
log = "0.4.22"
env_logger = "0.11.5"
chrono = "0.4.38"
futures = "0.3.30"
futures-util = "0.3.30"
backoff = { version = "0.4.0", features=["tokio"] }


# TODO: Update this to the version of corepc that supports Arm Macs once it's released
corepc-node = { git = "https://github.com/rust-bitcoin/corepc", rev = "7949505ebc29a478887852b6c0bc773f6a50baf7", features = ["28_0", "download"] }
# corepc-node = { version = "0.6.1", features = ["28_0", "download"] }
dotenv = "0.15.0"
bip39 = "2.1.0"

[patch.crates-io]
crypto-bigint = { git = "https://github.com/sp1-patches/RustCrypto-bigint", tag = "patch-0.5.5-sp1-4.0.0-rc.3" }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0-rc.3" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0-rc.3" }
bitcoin = { git = "https://github.com/riftresearch/rust-bitcoin", tag = "bitcoin-0.32.5-patch-v1" }
