[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude.workspace = true

[lib]
name = "integration_tests"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
data-engine.workspace = true
devnet.workspace = true
tempfile.workspace = true
rift-sdk.workspace = true
bitcoin-light-client-core.workspace = true