[package]
name = "btc-light-client-core"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
bitcoin-core-rs = { workspace = true }
crypto-bigint = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tiny-keccak = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = "1.18"
