[package]
version = "0.1.0"
name = "btc-light-client-script"
edition = "2021"
default-run = "benchmark"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"


[dependencies]
sp1-sdk = "3.0.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
btc-light-client-core = { path = "../core" }
btc-light-client-utils = { path = "../utils" }
once_cell = "1.18"
accumulators = { workspace = true }
prettytable = "0.10"

[build-dependencies]
sp1-helper = "3.0.0"
