[package]
name = "bitcoin-light-client-core"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types= { workspace = true }
bitcoin-core-rs = { workspace = true }
crypto-bigint = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tiny-keccak = { workspace = true }
serde = { workspace = true }
sol-bindings= { workspace = true }
hex-literal = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
test-data-utils = { workspace = true }
accumulators = { workspace = true }
tokio = { workspace = true }