[package]
name = "data-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude.workspace = true

[dependencies]
rift-sdk.workspace = true
bitcoin-light-client-core.workspace = true
sol-types.workspace = true
rift-core.workspace = true

tokio.workspace = true
eyre.workspace = true
futures-util.workspace = true
alloy.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-util.workspace = true
tokio-rusqlite.workspace = true