[package]
name = "rift-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
rift-core = { workspace = true }
bitcoin-light-client-core = { workspace = true }

accumulators = { workspace = true }
alloy = {workspace = true }
thiserror = { workspace = true }
bitcoin = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crypto-bigint = { workspace = true }
sp1-sdk = { workspace = true }