[package]
name = "rift-core"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
alloy = { workspace = true }
sha2 = {  workspace = true }
crypto-bigint = {  workspace = true }
serde = { workspace = true }
bitcoin = { workspace = true }
bitcoin-core-rs = { workspace = true }

[dev-dependencies]
test-data-utils = { workspace = true }